hphp/test/zend/good/ext/standard/tests/math/mt_getrandmax_error.php
<?php
var_dump(mt_getrandmax(true));
?>