hphp/test/zend/bad/ext/standard/tests/math/mt_srand_error.php
<?php
var_dump(mt_srand(500, true));
var_dump(mt_srand("fivehundred"));
var_dump(mt_srand("500ABC"));
?>